# napping

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml
napari_imcreg/: __init__.py  __main__.py  imcreg_controller.py
napari_imcreg/widgets/: __init__.py  _file_line_edit.py  registration_dialog.py  registration_widget.py
napping/: __init__.py  __main__.py  _napping_application.py  _napping_exception.py  _napping_navigator.py  _version.py  napping.py  utils.py
napping/_qt/: __init__.py  _file_line_edit.py  napping_dialog.py  napping_widget.py
napping/_tests/: test_dummy.py
napping/qt/: __init__.py  _file_line_edit.py  _napping_dialog.py  _napping_viewer.py  _napping_widget.py
napping/widgets/: __init__.py  _file_line_edit.py  napping_dialog.py  napping_widget.py
