[metadata]
name = napping
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
license = MIT
url = https://github.com/BodenmillerGroup/napping
description = Control point mapping and coordination transformation using napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/BodenmillerGroup/napping/issues
    Documentation = https://github.com/BodenmillerGroup/napping/#README.md
    Source Code = https://github.com/BodenmillerGroup/napping
    User Support = https://github.com/BodenmillerGroup/napping/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    imagecodecs
    napari[all]>=0.4.12
    napari-plugin-engine>=0.1.4
    numpy
    pandas
    scikit-image
use_scm_version =
    write_to = napping/_version.py

[options.entry_points]
napari.plugin =
    napping = napping
console_scripts =
    napping = napping.__main__:main
