[metadata]
name = napping
url = https://github.com/BodenmillerGroup/napping
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Control point mapping and coordination transformation using napari
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/BodenmillerGroup/napping/issues
    Documentation = https://github.com/BodenmillerGroup/napping/#README.md
    Source Code = https://github.com/BodenmillerGroup/napping
    User Support = https://github.com/BodenmillerGroup/napping/issues

[options]
install_requires =
    imagecodecs
    imageio
    napari[all]>=0.4.16
    numpy
    pandas
    qtpy
    scikit-image
python_requires = >=3.8
packages = find:

[options.entry_points]
console_scripts =
    napping = napping.__main__:main
